--- a/main.html
+++ b/main.html
@@ -10,7 +10,9 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<main calss="Accio" id="main" style="height: 150px;width: 150px;background-color:black " >
+	<p style="color:white;margin-left:32px; padding:10px; class="hello-accio-job">Hello Accio Job</p> 
+</main>
 </body>
 
 </html>
