--- a/main.html
+++ b/main.html
@@ -11,8 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<main calss="Accio" id="main" style="height: 150px;width: 150px;background-color:black " >
-	<p style="color:white;margin-left:32px; padding:10px; class="hello-accio-job">Hello Accio Job</p> 
-</main>
+        <p style="color:white; margin-left:32px; padding:10px;" class="hello-accio-job"> Hello Accio Job </p> 
+    </main>
 </body>
 
 </html>
