--- a/main.html
+++ b/main.html
@@ -1,18 +1,12 @@
-<!DOCTYPE html>
-
+<<!DOCTYPE html>
 <html>
+    <head>
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+    </head>
+    <body>
+        <main class="Accio" id="Job" style="width: 150px; height: 150px; background-color: black;">
+            <p class="hello-accio-job" style="color: white;margin-left: 32px;padding: 10px;">Hello Accio Job</p>
+        </main>
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<main calss="Accio" id="Job" style="height: 150px; width: 150px;background-color:black " >
-        <p style="color:white; margin-left:32px; padding:10px;" class="hello-accio">Hello Accio Job</p> 
-    </main>
-</body>
-
+    </body>
 </html>
